--- a/blog.html
+++ b/blog.html
@@ -45,12 +45,12 @@
 						<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum recusandae odit iure obcaecati adipisci enim iusto maxime aspernatur unde ipsum eos quam veritatis, quia est voluptatibus amet tempore minima asperiores, laudantium quas! Quidem perferendis dolores ullam deserunt tempora, iure, voluptatum.</span>
 					</div>
 					<div class="tags">
-						<div class="ul">
-							<a href="#">consectetur</a>
-							<a href="#">adipisci</a>
-							<a href="#">recusandae</a>
-							<a href="#">iusto</a>
-						</div>
+						<ul>
+							<li><a href="#">consectetur</a></li>
+							<li><a href="#">adipisci</a></li>
+							<li><a href="#">recusandae</a></li>
+							<li><a href="#">iusto</a></li>
+						</ul>
 					</div>
 				 </div>
 
