--- a/contact.html
+++ b/contact.html
@@ -30,9 +30,15 @@
         </nav>
     </header>
 
-		<main>
-
-		</main>
+		<div class="form_con">
+			<form action="" class="form">
+				<p><input type="text" name="name" class="feedback-input" placeholder="   Name"></p>
+				<p><input type="email" name="email" class="feedback-input" placeholder="   Email"></p>
+				<p><textarea name="text" id="comment" placeholder="  Message"></textarea></p>
+				<input type="submit" value="Submit" class="button-submit">
+				<div class="ease"></div>
+			</form>
+		</div>
 
 		<footer>
 			<nav>
