--- a/services.html
+++ b/services.html
@@ -30,9 +30,31 @@
         </nav>
     </header>
 
-		<main>
+		<div class="main">
+			<div class="imgS">
+				<img src="img/us.jpg" alt="">
+			</div>
 
-		</main>
+			<div class="ser-text">
+				<div class="ser-text-t">
+					<h3>Lorem ipsum dolor sit.</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores cum tempore expedita fuga, impedit facilis quod obcaecati, ea quaerat tempora veniam similique neque voluptatibus esse inventore iste voluptas nulla aspernatur, cumque animi magni dolor delectus soluta natus placeat! Aliquam ab porro ipsam. Laboriosam assumenda quae optio accusantium! Aspernatur, facilis, labore! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore vero deserunt qui, quos eligendi nobis non, nemo facere eaque ad pariatur explicabo incidunt, earum! Quos magnam vel libero placeat magni.</p>
+				</div>
+				<div class="ser-text-t">
+					<h3>Lorem ipsum dolor sit.</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores cum tempore expedita fuga, impedit facilis quod obcaecati, ea quaerat tempora veniam similique neque voluptatibus esse inventore iste voluptas nulla aspernatur, cumque animi magni dolor delectus soluta natus placeat! Aliquam ab porro ipsam. Laboriosam assumenda quae optio accusantium! Aspernatur, facilis, labore! Tempore vero deserunt qui, quos eligendi nobis non, nemo facere eaque ad pariatur explicabo incidunt, earum! Quos magnam vel libero placeat magni.</p>
+				</div>
+				<div class="ser-text-t">
+					<h3>Lorem ipsum dolor sit.</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores cum tempore expedita fuga, impedit facilis quod obcaecati, ea quaerat tempora veniam similique neque voluptatibus esse inventore iste voluptas nulla aspernatur, cumque animi magni dolor delectus soluta natus placeat! Aliquam ab porro ipsam. Laboriosam assumenda quae optio accusantium! Aspernatur, facilis, labore!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore vero deserunt qui, quos eligendi nobis non, nemo facere eaque ad pariatur explicabo incidunt, earum! Quos magnam vel libero placeat magni.</p>
+				</div>
+				<div class="ser-text-t">
+					<h3>Lorem ipsum dolor sit.</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores cum tempore expedita fuga, impedit facilis quod obcaecati, ea quaerat tempora veniam similique neque voluptatibus esse inventore iste voluptas nulla aspernatur, cumque animi magni dolor delectus soluta natus placeat! Aliquam ab porro ipsam. Laboriosam assumenda quae optio accusantium! Aspernatur, facilis, labore! Tempore vero deserunt qui, quos eligendi nobis non, nemo facere eaque ad pariatur explicabo incidunt, earum! Quos magnam vel libero placeat magni.</p>
+				</div>
+			</div>
+
+		</div>
 
 		<footer>
 			<nav>
